--- a/Crawl/Crawl/Views/Items/ItemDeletePage.xaml
+++ b/Crawl/Crawl/Views/Items/ItemDeletePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.ItemDeletePage"
-            Title="{Binding Title}">
+            >
 
     <ContentPage.ToolbarItems>
     </ContentPage.ToolbarItems>
@@ -20,32 +20,27 @@
                 HorizontalOptions="Center"
                 VerticalOptions="Center"/>
 
-            <StackLayout
-                Orientation="Horizontal"
-                HorizontalOptions="Start">
-                <Label Text="Name : " 
-                   FontSize="Medium" 
-                   HorizontalOptions="Start"/>
-                <Label Text="{Binding Data.Name}" 
-                    FontSize="Medium" 
-                    HorizontalOptions="Center"/>
-            </StackLayout>
-
-            <StackLayout
-                Orientation="Horizontal"
-                HorizontalOptions="Start">
-                <Label Text="Description : " 
-                   FontSize="Medium" 
-                   HorizontalOptions="Start"/>
-                <Label Text="{Binding Data.Description}" 
-                    FontSize="Medium" 
-                    HorizontalOptions="Center"/>
-            </StackLayout>
+            <Label Text="Name : " 
+                   TextColor="Teal"
+               FontSize="Medium" 
+               HorizontalOptions="Start"/>
+            <Label Text="{Binding Data.Name}" 
+                FontSize="Medium" 
+                HorizontalOptions="Center"/>
+            
+            <Label Text="Description : " 
+                   TextColor="Teal"
+               FontSize="Medium" 
+               HorizontalOptions="Start"/>
+            <Label Text="{Binding Data.Description}" 
+                FontSize="Medium" 
+                HorizontalOptions="Center"/>
 
             <StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Range : " 
+                       TextColor="Teal"
                    FontSize="Medium" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Range}" 
@@ -57,6 +52,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Damage : " 
+                       TextColor="Teal"
                    FontSize="Medium" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Damage}" 
@@ -68,17 +64,19 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Value : " 
+                       TextColor="Teal"
                    FontSize="Medium" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Value}" 
                     FontSize="Medium" 
                     HorizontalOptions="Center"/>
             </StackLayout>
-
+            
             <StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Location : " 
+                       TextColor="Teal"
                    FontSize="Medium" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Location}" 
@@ -89,16 +87,18 @@
             <StackLayout 
                 Orientation="Horizontal" 
                 HorizontalOptions="Start">
-                <Label Text="Attribute : " 
+            <Label Text="Attribute : " 
+                   TextColor="Teal"
                    FontSize="Medium" 
                    HorizontalOptions="Start"/>
-                <Label Text="{Binding Data.Attribute}" 
+            <Label Text="{Binding Data.Attribute}" 
                    FontSize="Medium" 
                    HorizontalOptions="Center"/>
             </StackLayout>
             
             <StackLayout>
             <Button Text="Yes, Delete"
+                    BackgroundColor="Teal"
                     HorizontalOptions="Center"
                     Clicked="Delete_Clicked"/>
             </StackLayout>  
