--- a/Crawl/Crawl/Views/Items/ItemNewPage.xaml
+++ b/Crawl/Crawl/Views/Items/ItemNewPage.xaml
@@ -2,7 +2,6 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.ItemNewPage"
-		     Title="Add New Item"
              xmlns:local="using:Crawl.Models">
 
     <ContentPage.ToolbarItems>
@@ -16,173 +15,149 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-
         <ScrollView>
             <StackLayout Spacing="20" Padding="15">
+                <Label Text="New Item" 
+                       TextColor="Teal"
+                       FontSize="Medium"
+                       FontAttributes="Bold"/>
+                       
+                <Label 
+                    Text="Name" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
 
-                <Label Text="Item Create Page" FontSize="Small" />
+                <Entry 
+                    Text="{Binding Data.Name}" 
+                    FontSize="Small" 
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="Center"/>
 
-                <Grid
-                    RowSpacing="1"
-                    ColumnSpacing="2"
-                    VerticalOptions="Center">
+                <Label 
+                    Text="Description" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                    </Grid.ColumnDefinitions>
+                <Entry 
+                    Text="{Binding Data.Description}" 
+                    FontSize="Small" 
+                    Margin="0" 
+                    VerticalOptions="Center"/>
+                 
+                <StackLayout
+                    Orientation="Horizontal">
+                <Label 
+                    Text="Range" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"/>
+                <Label 
+                    Text="{Binding Data.Range}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    x:Name="RangeValue"
+                    VerticalOptions="Center"/>
+                </StackLayout>
 
-                    <StackLayout Grid.Row="0" Grid.Column="0">
-                        <Label 
-                            Text="Name" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="0" Grid.Column="1">
-                        <Entry 
-                            Text="{Binding Data.Name}" 
-                            FontSize="Small" 
-                            HorizontalOptions="FillAndExpand"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
+                <Stepper 
+                    Value="{Binding Data.Range, Mode=TwoWay}"
+                    Minimum="0"
+                    Maximum="20"
+                    Increment="1"
+                    ValueChanged="Range_OnStepperValueChanged"
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
+                    
+                
+                <StackLayout
+                    Orientation="Horizontal">
+                    <Label 
+                        Text="Value"
+                        TextColor="Teal"
+                        FontSize="Medium" 
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+               
+                    <Label 
+                        Text="{Binding Data.Value}" 
+                        FontSize="Medium" 
+                        HorizontalOptions="Start"
+                        x:Name="ValueValue"
+                        VerticalOptions="Center"/>
+                </StackLayout>
 
-                    <StackLayout Grid.Row="1" Grid.Column="0">
-                        <Label 
-                            Text="Description" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="1" Grid.Column="1">
-                        <Entry 
-                            Text="{Binding Data.Description}" 
-                            FontSize="Small" 
-                            Margin="0" 
-                            VerticalOptions="Center"/>
-                    </StackLayout>
+                <Stepper Value="{Binding Data.Value, Mode=TwoWay}"
+                    Minimum="0"
+                    Maximum="20"
+                    Increment="1"
+                    ValueChanged="Value_OnStepperValueChanged"
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
 
-                    <StackLayout Grid.Row="2" Grid.Column="0">
-                        <Label 
-                            Text="Range" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalOptions="Center">
-                        <Label 
-                            Text="{Binding Data.Range}" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            x:Name="RangeValue"
-                            VerticalOptions="Center"/>
+                <Label 
+                    Text="Location" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
+                
+                <Picker 
+                    ItemsSource="{x:Static local:ItemLocationList.GetListItem}" 
+                    SelectedItem="{Binding Data.Location, Converter={StaticResource StringEnum}, Mode=TwoWay}" 
+                    x:Name="LocationPicker" 
+                    VerticalOptions="Center"/>
 
-                        <Stepper 
-                            Value="{Binding Data.Range, Mode=TwoWay}"
-                            Minimum="0"
-                            Maximum="20"
-                            Increment="1"
-                            ValueChanged="Range_OnStepperValueChanged"
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
+                <Label 
+                    Text="Attribute" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
+    
+                <Picker 
+                    ItemsSource="{x:Static local:AttributeList.GetListItem}" 
+                    SelectedItem="{Binding Data.Attribute, Converter={StaticResource StringEnum}, Mode=TwoWay}" 
+                    x:Name="AttributePicker"
+                    VerticalOptions="Center"/>
 
-                    <StackLayout Grid.Row="3" Grid.Column="0">
-                        <Label 
-                            Text="Value"
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="3" Grid.Column="1" Orientation="Horizontal" VerticalOptions="Center">
-                        <Label 
-                            Text="{Binding Data.Value}" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            x:Name="ValueValue"
-                            VerticalOptions="Center"/>
+                <Label 
+                    Text="Image" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
+                <Entry 
+                    Text="{Binding Data.ImageURI}" 
+                    FontSize="Small" 
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="Center"/>
+           
+                <Label 
+                    Text="Damage" 
+                    TextColor="Teal"
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"/>
 
-                        <Stepper Value="{Binding Data.Value, Mode=TwoWay}"
-                            Minimum="0"
-                            Maximum="20"
-                            Increment="1"
-                            ValueChanged="Value_OnStepperValueChanged"
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
+                <Label 
+                    Text="{Binding Data.Damage}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Start"
+                    x:Name="DamageValue"
+                    VerticalOptions="Center"/>
 
-                    <StackLayout Grid.Row="4" Grid.Column="0">
-                        <Label 
-                            Text="Location" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="4" Grid.Column="1">
-                        <Picker 
-                            ItemsSource="{x:Static local:ItemLocationList.GetListItem}" 
-                            SelectedItem="{Binding Data.Location, Converter={StaticResource StringEnum}, Mode=TwoWay}" 
-                            x:Name="LocationPicker" 
-                            VerticalOptions="Center"/>
-                    </StackLayout>
+                <Stepper 
+                    Value="{Binding Data.Damage, Mode=TwoWay}"
+                    Minimum="0"
+                    Maximum="20"
+                    Increment="1"
+                    ValueChanged="Damage_OnStepperValueChanged"
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center"/>
 
-                    <StackLayout Grid.Row="5" Grid.Column="0">
-                        <Label 
-                            Text="Attribute" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="5" Grid.Column="1">
-                        <Picker 
-                            ItemsSource="{x:Static local:AttributeList.GetListItem}" 
-                            SelectedItem="{Binding Data.Attribute, Converter={StaticResource StringEnum}, Mode=TwoWay}" 
-                            x:Name="AttributePicker"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-
-                    <StackLayout Grid.Row="6" Grid.Column="0">
-                        <Label 
-                            Text="Image" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-                    <StackLayout Grid.Row="6" Grid.Column="1">
-                        <Entry 
-                            Text="{Binding Data.ImageURI}" 
-                            FontSize="Small" 
-                            HorizontalOptions="FillAndExpand"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-
-                    <StackLayout Grid.Row="7" Grid.Column="0">
-                        <Label 
-                            Text="Damage" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"/>
-                    </StackLayout>
-
-                    <StackLayout Grid.Row="7" Grid.Column="1" Orientation="Horizontal" VerticalOptions="Center">
-                        <Label 
-                            Text="{Binding Data.Damage}" 
-                            FontSize="Medium" 
-                            HorizontalOptions="Start"
-                            x:Name="DamageValue"
-                            VerticalOptions="Center"/>
-
-                        <Stepper 
-                            Value="{Binding Data.Damage, Mode=TwoWay}"
-                            Minimum="0"
-                            Maximum="20"
-                            Increment="1"
-                            ValueChanged="Damage_OnStepperValueChanged"
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"/>
-                    </StackLayout>
-
-                </Grid>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
