--- a/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
@@ -2,12 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.MonsterDetailPage"
-             Title="{Binding Title}">
+             >
              
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Edit" Clicked="Edit_Clicked" />
         <ToolbarItem Text="Delete" Clicked="Delete_Clicked" />
-        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
     </ContentPage.ToolbarItems>
 
     <ScrollView>
@@ -17,13 +16,18 @@
             Spacing="20"
             Padding="15">
 
-            <Label Text="Monster Detail Page" FontSize="Medium" />
+            <Label Text="Monster Details" 
+                   TextColor="Red"
+                   HorizontalOptions="Center"
+                   FontAttributes="Bold"
+                   FontSize="Medium" />
 
 			<!-- Name Attribute -->
             <StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Name : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Name}" 
@@ -36,6 +40,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Type : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
 				<Label Text="{Binding Data.Type}" 
@@ -48,6 +53,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Difficulty : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
 				<Label Text="{Binding Data.Difficulty}" 
@@ -60,6 +66,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Max Health : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.MaxHealth}" 
@@ -72,6 +79,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Attack : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.Attack}" 
@@ -84,6 +92,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Defense : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.Defense}" 
@@ -96,6 +105,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Speed : " 
+                       TextColor="Red"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.Speed}" 
