Restyle Score UI

--- a/Crawl/Crawl/Views/Scores/ScoreDeletePage.xaml
+++ b/Crawl/Crawl/Views/Scores/ScoreDeletePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.ScoreDeletePage"
-            Title="{Binding Title}">
+             >
     
     <ContentPage.ToolbarItems>
     </ContentPage.ToolbarItems>
@@ -12,10 +12,17 @@
         Orientation="Vertical"
         Spacing="20"
         Padding="15">
+          
+            <Label Text="Delete Score"
+                       TextColor="White"
+                       FontAttributes="Bold" 
+                       FontSize="Medium" 
+                       HorizontalOptions="Center"/>
             <StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Name: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Name}" 
@@ -27,6 +34,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Score: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.ScoreTotal}" 
@@ -38,6 +46,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Game Date: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.GameDate}" 
@@ -49,6 +58,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="AutoBattle: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.AutoBattle}" 
@@ -59,7 +69,8 @@
             <StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
-                <Label Text="Monsters Slain: " 
+                <Label Text="Monsters Slain: "
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.AutoBattle}" 
@@ -71,6 +82,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Experience Gained: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.ExperienceGainedTotal}" 
@@ -82,6 +94,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Characters at Death: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.CharacterAtDeathList}" 
@@ -93,6 +106,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Monsters Killed: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.MonstersKilledList}" 
@@ -104,6 +118,7 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Items Dropped: " 
+                       TextColor="White"
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.ItemsDroppedList}" 
