--- a/Crawl/Crawl/Views/Scores/ScoreEditPage.xaml
+++ b/Crawl/Crawl/Views/Scores/ScoreEditPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.ScoreEditPage"		     
-             Title="{Binding Title}">
+             >
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Save" Clicked="Save_Clicked" />
@@ -12,30 +12,34 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Spacing="20" Padding="15">
-                <Label Text="Score Create Page" FontSize="Small" />
+                <Label Text="Edit Score"
+                       TextColor="White"
+                       FontAttributes="Bold" 
+                       FontSize="Medium" 
+                       HorizontalOptions="Center"/>
 
-                <Label Text="Score:" FontSize="Medium" />
+                <Label Text="Score:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.ScoreTotal}" FontSize="Small"/>
 
-                <Label Text="Game Date:" FontSize="Medium" />
+                <Label Text="Game Date:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.GameDate}" FontSize="Small"/>
 
-                <Label Text="AutoBattle:" FontSize="Medium" />
+                <Label Text="AutoBattle:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.AutoBattle}" FontSize="Small"/>
 
-                <Label Text="Slain Monster Count:" FontSize="Medium" />
+                <Label Text="Slain Monster Count:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.MonsterSlainNumber}" FontSize="Small"/>
 
-                <Label Text="Total Experience Gained:" FontSize="Medium" />
+                <Label Text="Total Experience Gained:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.ExperienceGainedTotal}" FontSize="Small"/>
 
-                <Label Text="Characters at Death:" FontSize="Medium" />
+                <Label Text="Characters at Death:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.CharacterAtDeathList}" FontSize="Small"/>
 
-                <Label Text="Monsters Killed:" FontSize="Medium" />
+                <Label Text="Monsters Killed:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.MonstersKilledList}" FontSize="Small"/>
 
-                <Label Text="Items Dropped:" FontSize="Medium" />
+                <Label Text="Items Dropped:" FontSize="Medium" TextColor="White"/>
                 <Entry Text="{Binding Data.ItemsDroppedList}" FontSize="Small"/>
             </StackLayout>
         </ScrollView>
